--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mongoose": "^5.3.15",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-confirm-alert": "^2.0.7",
     "react-dom": "^16.6.3",
+    "react-material-ui-form-validator": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
