--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.3.15",
+    "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^1.4.2",
+    "react-bootstrap-table2-filter": "^1.1.0",
     "react-confirm-alert": "^2.0.7",
     "react-dom": "^16.6.3",
     "react-material-ui-form-validator": "^2.0.3",
+    "react-redux": "^6.0.0",
+    "react-redux-form": "^1.16.11",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1",
+    "redux-form": "^8.0.1",
+    "redux-thunk": "^2.3.0",
+    "validator": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
